8074921: OS X build broken by reference to XToolkit Reviewed-by: alexsch, serb